# primal

./: .gitignore  .travis.yml  Notes.md  README.md  cabal.project  stack-extra.yaml  stack-lts-11.22.yaml  stack-lts-3.yaml  stack.ghc-8.8.yaml  stack.yaml
prim-array/: CHANGELOG.md  README.md  (+1 more)
prim-core/: CHANGELOG.md  README.md  prim-core.cabal
prim-core/cbits/: prim.c  prim_core.c  prim_core_compat.c  prim_core_compat.h  prim_core_stg.cmm
prim-core/src/Control/Monad/: Prim.hs
prim-core/src/Control/Monad/Prim/: Core.hs  Internal.hs  Unsafe.hs
prim-core/src/Control/Prim/: Concurrent.hs  Eval.hs  Exception.hs  Monad.hs
prim-core/src/Control/Prim/Monad/: Internal.hs  Unsafe.hs
prim-core/src/Data/: Prim.hs
prim-core/src/Data/Prim/: Class.hs  Foreign.hs  StableName.hs  StablePtr.hs
prim-core/src/Data/Prim/Foreign/: Cmm.hs
prim-core/src/Foreign/: Prim.hs
prim-core/src/Foreign/Prim/: C.hs  Cmm.hs  Ptr.hs  StablePtr.hs  Weak.hs  WeakPtr.hs
prim-core/src/Foreign/Prim/C/: LtGHC802.hs  LtGHC806.hs
primal/: .#primal.cabal  CHANGELOG.md  README.md  primal.cabal
primal-bridge/: README.md  prim-compat-array.cabal  stack.yaml
primal-bridge/src/: Lib.hs
primal-bridge/tests/: Common.hs  LibSpec.hs
primal-memory/: CHANGELOG.md  README.md  primal-memory.cabal
primal-memory/bench/: Atomic.hs  Base16.hs  Bench.hs  Compare.hs  Conversion.hs  Endianness.hs
primal-memory/cbits/: primal_memory.c
primal-memory/src/Data/Prim/: Memory.hs
primal-memory/src/Data/Prim/Memory/: Addr.hs  ByteArray.hs  ByteString.hs  Bytes.hs  Bytes.hs-boot  Fold.hs  ForeignPtr.hs  Internal.hs  PArray.hs  PrimArray.hs  Ptr.hs  Text.hs
primal-memory/src/Data/Prim/Memory/Bytes/: Internal.hs
primal-memory/src/Primal/: Memory.hs
primal-memory/src/Primal/Memory/: Addr.hs  ByteString.hs  Bytes.hs  Encoding.hs  Endianness.hs  FAddr.hs  Fold.hs  ForeignPtr.hs  Internal.hs  PArray.hs  PUArray.hs  Ptr.hs  Sized.hs  Text.hs  UVector.hs
primal-memory/src/Primal/Memory/Bytes/: Internal.hs
primal-memory/src/Primal/Memory/Encoding/: Base16.hs
primal-memory/tests/: doctests.hs
primal-memory/tests/Test/Prim/: Common.hs
primal-memory/tests/Test/Prim/Memory/: BytesExtraSpec.hs  BytesSpec.hs  Common.hs  PtrSpec.hs
primal-memory/tests/Test/Primal/Memory/: Common.hs  EndiannessSpec.hs  FAddrSpec.hs
primal-mutable/: primal-mutable.cabal
primal-mutable/bench/: Atomic.hs  MRef.hs
primal-mutable/src/Data/Prim/: MArray.hs
primal-mutable/src/Data/Prim/MArray/: Atomic.hs  Boxed.hs  Internal.hs  Unboxed.hs
primal-mutable/src/Data/Prim/MRef/: Atomic.hs  Internal.hs  MVar.hs  Ref.hs
primal-ops/: CHANGELOG.md  LICENSE  README.md  primal-ops.cabal  primal.cabal
primal-ops/cbits/: longlong.c  primal_compat.c  primal_longlong.c
primal-ops/internal/Primal/Ops/Int/: Internal.hs
primal-ops/internal/Primal/Ops/Word/: Internal.hs
primal-ops/src/Primal/Ops/: ByteArray.hs  Int.hs  Word.hs
primal-ops/tests/: Main.hs  doctests.hs
primal-ops/tests/Test/Primal/Ops/: IntSpec.hs
primal-pvar/: CHANGELOG.md  primal-pvar.cabal
primal-pvar/src/Data/Prim/: PVar.hs
primal-pvar/src/Data/Prim/PVar/: Internal.hs  Unsafe.hs
primal-pvar/tests/Test/Prim/: PVarSpec.hs
primal-test/: CHANGELOG.md  README.md  primal-test.cabal
primal-test/memory-tests/Test/Prim/Memory/: BytesSpec.hs  PtrSpec.hs
primal-test/memory-tests/Test/Primal/Memory/: BytesExtraSpec.hs  BytesSpec.hs  MemExtraSpec.hs  MemSpec.hs  PtrSpec.hs
primal-test/mutable-tests/Test/Prim/: MArraySpec.hs
primal-test/mutable-tests/Test/Primal/: MutArraySpec.hs
primal-test/src/Test/: Prim.hs  Primal.hs
primal-test/src/Test/Prim/: Array.hs  Atomic.hs  Common.hs  MArray.hs  MRef.hs  Memory.hs
primal-test/src/Test/Primal/: Common.hs  MArray.hs  MRef.hs  Memory.hs  MutArray.hs  MutRef.hs
primal-test/tests/Test/Prim/: MArraySpec.hs
primal-test/tests/Test/Prim/Memory/: BytesExtraSpec.hs  BytesSpec.hs  PtrSpec.hs
primal-test/tests/Test/Prim/Mutable/: MArraySpec.hs
primal/bench/: MVar.hs
primal/cbits/: primal.c  primal_atomic.c  primal_compat.c  primal_stg.cmm
primal/src/Control/Prim/: Concurrent.hs  Eval.hs  Exception.hs  Monad.hs
primal/src/Control/Prim/Concurrent/: MVar.hs
primal/src/Control/Prim/Monad/: Internal.hs  Throw.hs  Unsafe.hs
primal/src/Data/: Prim.hs
primal/src/Data/Prim/: Array.hs  Atom.hs  Atomic.hs  Class.hs  MVar.hs  Ref.hs  StableName.hs
primal/src/Data/Prim/Array/: Boxed.hs  Internal.hs  Unboxed.hs
primal/src/Foreign/: Prim.hs
primal/src/Foreign/Prim/: C.hs  Cmm.hs  Ptr.hs  WeakPtr.hs
primal/src/Foreign/Prim/C/: Atomic.hs  LtGHC802.hs  LtGHC806.hs
primal/src/Primal/: Array.hs  Concurrent.hs  Element.hs  Eval.hs  Exception.hs  Foreign.hs  Mem.hs  Monad.hs  Prim.hs  Ref.hs  Unbox.hs  Unlift.hs
primal/src/Primal/Array/: Boxed.hs  Internal.hs  SmallBoxed.hs  Unboxed.hs
primal/src/Primal/Array/Boxed/: Small.hs  Unlifted.hs
primal/src/Primal/Concurrent/: MVar.hs
primal/src/Primal/Data/: Array.hs  Ref.hs
primal/src/Primal/Data/Mutable/: Eq.hs  Foldable.hs  Ord.hs
primal/src/Primal/Element/: Unbox.hs  Unlift.hs
primal/src/Primal/Element/Unbox/: Atom.hs  Atomic.hs  Class.hs  Instances.hs  Primitive.hs  Tuples.hs
primal/src/Primal/Exception/: Interruptible.hs  Uninterruptible.hs  Unsafe.hs
primal/src/Primal/Foreign/: C.hs  Cmm.hs  Errno.hs  StablePtr.hs
primal/src/Primal/Foreign/C/: Atomic.hs  LtGHC802.hs  LtGHC806.hs
primal/src/Primal/Mem/: StableName.hs  Weak.hs
primal/src/Primal/Memory/: GC.hs  StableName.hs  Weak.hs
primal/src/Primal/Monad/: Internal.hs  Raises.hs  Throw.hs  Unsafe.hs
primal/src/Primal/Mutable/: Eq.hs  Foldable.hs  Freeze.hs  Ord.hs
primal/src/Primal/Prim/: Atom.hs  Atomic.hs  Class.hs
primal/src/Primal/Ref/: Boxed.hs  Unboxed.hs
primal/src/Primal/Ref/Boxed/: Atomic.hs
primal/src/Primal/Ref/Unboxed/: Atomic.hs
primal/src/Primal/Unbox/: Atom.hs  Atomic.hs  Class.hs
primal/tests/: doctests.hs
primal/tests/Test/Prim/: ArraySpec.hs  MVarSpec.hs  RefSpec.hs
primal/tests/Test/Primal/: ArraySpec.hs  BRefSpec.hs  MVarSpec.hs  RefSpec.hs  URefSpec.hs
(+95 files in other folders)
