name:                prim-core
version:             0.1.0.0
synopsis:            Short description
description:         Please see the README on GitHub at <https://github.com/lehins/prim-core#readme>
homepage:            https://github.com/lehins/prim-core
license:             BSD3
license-file:        LICENSE
author:              Alexey Kuleshevich
maintainer:          alexey@kuleshevi.ch
copyright:           2020 Alexey Kuleshevich
category:            Algorithms
build-type:          Custom
extra-source-files:  README.md
                   , CHANGELOG.md
cabal-version:       1.18
tested-with:         GHC == 8.4.3
                   , GHC == 8.4.4
                   , GHC == 8.6.3
                   , GHC == 8.6.4
                   , GHC == 8.6.5
                   , GHC == 8.8.1
                   , GHC == 8.8.2
                   , GHC == 8.10.1
custom-setup
  setup-depends:
      base
    , Cabal
    , cabal-doctest >=1.0.6

library
  hs-source-dirs:      src
  exposed-modules:     Control.Prim.Concurrent
                     , Control.Prim.Eval
                     , Control.Prim.Exception
                     , Control.Prim.Monad
                     , Control.Prim.Monad.Unsafe
                     , Data.Prim
                     , Data.Prim.Class
                     , Data.Prim.StableName
                     , Foreign.Prim
                     , Foreign.Prim.StablePtr

  other-modules:       Control.Prim.Monad.Internal
                     , Foreign.Prim.C
                     , Foreign.Prim.Cmm
  build-depends:       base >= 4.8 && < 5
                     , deepseq
                     , transformers

  default-language:    Haskell2010
  ghc-options:         -Wall
  c-sources: cbits/prim_core_stg.cmm
           , cbits/prim_core.c
  if !os(solaris)
      cc-options: -ftree-vectorize
  if arch(i386) || arch(x86_64)
      cc-options: -msse2

-- test-suite doctests
--   type:             exitcode-stdio-1.0
--   hs-source-dirs:   tests
--   main-is:          doctests.hs
--   build-depends: base
--                , doctest >=0.15
--                , prim-core
--                , template-haskell
--   default-language:    Haskell2010
--   ghc-options:        -Wall
--                       -fno-warn-orphans
--                       -threaded


source-repository head
  type:     git
  location: https://github.com/lehins/prim-core
