name:                primal-memory
version:             0.1.0.0
synopsis:            Short description
description:         Please see the README on GitHub at <https://github.com/lehins/primal#readme>
homepage:            https://github.com/lehins/primal
license:             BSD3
license-file:        LICENSE
author:              Alexey Kuleshevich
maintainer:          alexey@kuleshevi.ch
copyright:           2020 Alexey Kuleshevich
category:            Algorithms
build-type:          Custom
extra-source-files:  README.md
                   , CHANGELOG.md
cabal-version:       1.18
tested-with:         GHC == 8.4.3
                   , GHC == 8.4.4
                   , GHC == 8.6.3
                   , GHC == 8.6.4
                   , GHC == 8.6.5
                   , GHC == 8.8.1
                   , GHC == 8.8.2
                   , GHC == 8.10.1
custom-setup
  setup-depends:
      base
    , Cabal
    , cabal-doctest >=1.0.6

library
  hs-source-dirs:      src
  exposed-modules:     Data.Prim.Memory
                     , Data.Prim.Memory.Bytes
                     , Data.Prim.Memory.Addr
                     , Data.Prim.Memory.ByteString
                     , Data.Prim.Memory.Ptr
                     , Data.Prim.Memory.ForeignPtr
  other-modules:
  build-depends:       base >= 4.8 && < 5
                     , bytestring
                     , deepseq
                     , primal

  default-language:    Haskell2010
  ghc-options:         -Wall
-- test-suite doctests
--   type:             exitcode-stdio-1.0
--   hs-source-dirs:   tests
--   main-is:          doctests.hs
--   build-depends: base
--                , doctest >=0.15
--                , prim-bytes
--                , template-haskell
--   default-language:    Haskell2010
--   ghc-options:        -Wall
--                       -fno-warn-orphans
--                       -threaded

test-suite tests
  type:               exitcode-stdio-1.0
  hs-source-dirs:     tests
  main-is:            Main.hs
  other-modules:      Spec
                    , Test.Prim.Memory.Common
                    , Test.Prim.Memory.BytesSpec
                    , Test.Prim.Memory.BytesExtraSpec
                    , Test.Prim.Memory.PtrSpec
  build-depends:      base
                    , bytestring
                    , deepseq
                    , primal
                    , primal-memory
                    , primitive
                    , hspec
                    , QuickCheck

  default-language:   Haskell2010
  ghc-options:        -Wall
                      -fno-warn-orphans
                      -threaded
                      -with-rtsopts=-N2

test-suite tests-O0
  type:               exitcode-stdio-1.0
  hs-source-dirs:     tests
  main-is:            Main.hs
  other-modules:      Spec
                    , Test.Prim.Memory.Common
                    , Test.Prim.Memory.BytesSpec
                    , Test.Prim.Memory.BytesExtraSpec
                    , Test.Prim.Memory.PtrSpec
  build-depends:      base
                    , bytestring
                    , deepseq
                    , primal
                    , primal-memory
                    , primitive
                    , hspec
                    , QuickCheck

  default-language:   Haskell2010
  ghc-options:        -Wall
                      -fno-warn-orphans
                      -threaded
                      -with-rtsopts=-N2
                      -O0

benchmark bench
  type:                exitcode-stdio-1.0
  hs-source-dirs:      bench
  main-is:             Bench.hs
  ghc-options:         -Wall
                       -threaded
                       -O2
                       -with-rtsopts=-N
  build-depends:       base
                     , criterion
                     , primal
                     , primal-memory
                     , primitive
                     , deepseq
                     , random
  default-language:    Haskell2010

benchmark convert
  type:                exitcode-stdio-1.0
  hs-source-dirs:      bench
  main-is:             Conversion.hs
  ghc-options:         -Wall
                       -threaded
                       -O2
                       -with-rtsopts=-N
  build-depends:       base
                     , criterion
                     , primal
                     , primal-memory
                     , primitive
                     , deepseq
                     , random
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/lehins/prim-bytes
