name:                primal-memory
version:             1.0.0.0
synopsis:            Unified interface for memory managemenet.
description:         Please see the README on GitHub at <https://github.com/lehins/primal#readme>
homepage:            https://github.com/lehins/primal
license:             BSD3
license-file:        LICENSE
author:              Alexey Kuleshevich
maintainer:          alexey@kuleshevi.ch
copyright:           2020 Alexey Kuleshevich
category:            Algorithms
build-type:          Simple
extra-source-files:  README.md
                   , CHANGELOG.md
cabal-version:       1.18
tested-with:         GHC == 8.0.2
                   , GHC == 8.2.2
                   , GHC == 8.4.3
                   , GHC == 8.4.4
                   , GHC == 8.6.3
                   , GHC == 8.6.4
                   , GHC == 8.6.5
                   , GHC == 8.8.3
                   , GHC == 8.8.4
                   , GHC == 8.10.1

library
  hs-source-dirs:      src
  exposed-modules:     Primal.Memory
                     , Primal.Memory.Addr
                     , Primal.Memory.ByteString
                     , Primal.Memory.Bytes
                     , Primal.Memory.Encoding
                     , Primal.Memory.Endianness
                     , Primal.Memory.ForeignPtr
                     , Primal.Memory.Fold
                     , Primal.Memory.PArray
                     , Primal.Memory.Ptr
                     , Primal.Memory.Text
                     , Primal.Memory.Internal
  other-modules:       Primal.Memory.Bytes.Internal
                     , Primal.Memory.Encoding.Base16
  build-depends:       base >= 4.9 && < 5
                     , bytestring >= 0.10.4
                     , deepseq
                     , primal >= 0.2
                     , text >= 1.1.1.3
                     , transformers

  default-language:    Haskell2010
  ghc-options:         -Wall
  c-sources: cbits/primal_memory.c

test-suite doctests
  type:             exitcode-stdio-1.0
  hs-source-dirs:   tests
  main-is:          doctests.hs
  build-depends: base
               , doctest >=0.15
  if impl(ghc >= 8.2) && impl(ghc < 8.10)
    build-depends: bytestring
                 , primal
                 , primal-memory
                 , QuickCheck
  default-language:    Haskell2010
  ghc-options:        -Wall
                      -threaded

test-suite tests
  type:               exitcode-stdio-1.0
  hs-source-dirs:     tests
  main-is:            Main.hs
  other-modules:      Spec
                    , Test.Primal.Memory.Common
                    , Test.Primal.Memory.Encoding.Base16Spec
                    , Test.Primal.Memory.EndiannessSpec
  build-tool-depends: hspec-discover:hspec-discover
  build-depends:      QuickCheck
                    , base
                    , base16-bytestring >= 1.0
                    , bytestring
                    , deepseq
                    , hspec
                    , primal
                    , primal-memory
                    , quickcheck-classes-base

  default-language:   Haskell2010
  ghc-options:        -Wall
                      -fno-warn-orphans
                      -threaded
                      -with-rtsopts=-N2

benchmark bench
  type:                exitcode-stdio-1.0
  hs-source-dirs:      bench
  main-is:             Bench.hs
  ghc-options:         -Wall
                       -threaded
                       -O2
  build-depends:       base
                     , criterion
                     , primal
                     , primal-memory
                     , primitive
                     , deepseq
                     , random >= 1.2.0
  default-language:    Haskell2010

benchmark convert
  type:                exitcode-stdio-1.0
  hs-source-dirs:      bench
  main-is:             Conversion.hs
  ghc-options:         -Wall
                       -threaded
                       -O2
  build-depends:       base
                     , criterion
                     , primal
                     , primal-memory
                     , primitive
                     , deepseq
                     , random
  default-language:    Haskell2010

benchmark compare
  type:                exitcode-stdio-1.0
  hs-source-dirs:      bench
  main-is:             Compare.hs
  ghc-options:         -Wall
                       -threaded
                       -O2
  build-depends:       base
                     , criterion
                     , primal
                     , primal-memory
                     , primitive
                     , deepseq
                     , random
  default-language:    Haskell2010

benchmark base16
  type:                exitcode-stdio-1.0
  hs-source-dirs:      bench
  main-is:             Base16.hs
  ghc-options:         -Wall
                       -threaded
                       -O2
  build-depends:       base
                     , criterion
                     , primal
                     , primal-memory
                     , memory
                     , bytestring
                     , base16-bytestring >= 1.0
                     , random
                     , transformers
  default-language:    Haskell2010

benchmark endianness
  type:                exitcode-stdio-1.0
  hs-source-dirs:      bench
  main-is:             Endianness.hs
  ghc-options:         -Wall
                       -threaded
                       -O2
  build-depends:       base
                     , bytestring
                     , criterion
                     , primal
                     , primal-memory
                     , memory
                     , bytestring
                     , random
                     , transformers
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/lehins/primal
  subdir:   primal-memory
