name:                primal-mutable
version:             0.1.0.0
synopsis:            Short description
description:         Please see the README on GitHub at <https://github.com/lehins/primal#readme>
homepage:            https://github.com/lehins/primal
license:             BSD3
license-file:        LICENSE
author:              Alexey Kuleshevich
maintainer:          alexey@kuleshevi.ch
copyright:           2020 Alexey Kuleshevich
category:            Algorithms
build-type:          Custom
extra-source-files:  README.md
                   , CHANGELOG.md
cabal-version:       1.18
tested-with:         GHC == 8.0.2
                   , GHC == 8.2.2
                   , GHC == 8.4.3
                   , GHC == 8.4.4
                   , GHC == 8.6.3
                   , GHC == 8.6.4
                   , GHC == 8.6.5
                   , GHC == 8.8.1
                   , GHC == 8.8.2
                   , GHC == 8.10.1
custom-setup
  setup-depends:
      base
    , Cabal
    , cabal-doctest >=1.0.6

library
  hs-source-dirs:      src
  exposed-modules:     Data.Prim.MArray
                     , Data.Prim.MArray.Atomic
                     , Data.Prim.MArray.Boxed
                     , Data.Prim.MArray.Boxed.Small
                     , Data.Prim.MArray.Internal
                     , Data.Prim.MArray.Unboxed
                     , Data.Prim.MArray.Unboxed.Ragged
                     , Data.Prim.MRef
                     , Data.Prim.MRef.Atomic
                     , Data.Prim.MRef.Internal
                     -- , Data.Prim.MRef.PVar
                     , Data.Prim.MRef.MVar
                     , Data.Prim.MRef.Ref
  other-modules:
  build-depends:       base >= 4.9 && < 5
                     , deepseq
                     , primal
                     , primal-memory

  default-language:    Haskell2010
  ghc-options:         -Wall

-- test-suite doctests
--   type:             exitcode-stdio-1.0
--   hs-source-dirs:   tests
--   main-is:          doctests.hs
--   build-depends: base
--                , doctest >=0.15
--                , primal-array
--                , template-haskell
--   default-language:    Haskell2010
--   ghc-options:        -Wall
--                       -fno-warn-orphans
--                       -threaded

-- test-suite tests
--   type:               exitcode-stdio-1.0
--   hs-source-dirs:     tests
--   main-is:            Main.hs
--   other-modules:      Common
--                     , LibSpec
--                     , Spec
--   build-depends:      base             >= 4.8 && < 5
--                     , primal-array
--                     , hspec
--                     , QuickCheck

--   default-language:   Haskell2010
--   ghc-options:        -Wall
--                       -fno-warn-orphans
--                       -threaded
--                       -with-rtsopts=-N2

benchmark atomic
  type:                exitcode-stdio-1.0
  hs-source-dirs:      bench
  main-is:             Atomic.hs
  ghc-options:         -Wall
                       -threaded
                       -O2
                       -with-rtsopts=-N
  build-depends:       base
                     , atomic-primops
                     , criterion
                     , primal
                     , primal-memory
                     , primal-mutable
                     , deepseq
                     , unliftio
  default-language:    Haskell2010


-- benchmark bench
--   type:                exitcode-stdio-1.0
--   hs-source-dirs:      bench
--   main-is:             Bench.hs
--   ghc-options:         -Wall
--                        -threaded
--                        -O2
--                        -with-rtsopts=-N
--   build-depends:       base
--                      , criterion
--                      , primal-array
--   default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/lehins/primal
