cabal-version:       3.0
name:                primal-ops
version:             1.0.0.0
synopsis:            Primal world of Haskell.
description:         Please see the README on GitHub at <https://github.com/lehins/primal#readme>
homepage:            https://github.com/lehins/primal
license:             BSD-3-Clause
license-file:        LICENSE
author:              Alexey Kuleshevich
maintainer:          alexey@kuleshevi.ch
copyright:           2020-2023 Alexey Kuleshevich
category:            Algorithms
build-type:          Simple
extra-source-files:  README.md
                   , CHANGELOG.md
tested-with:         GHC == 7.10.2
                   , GHC == 7.10.3
                   , GHC == 8.0.1
                   , GHC == 8.0.2
                   , GHC == 8.2.2
                   , GHC == 8.4.3
                   , GHC == 8.4.4
                   , GHC == 8.6.3
                   , GHC == 8.6.4
                   , GHC == 8.6.5
                   , GHC == 8.8.2
                   , GHC == 8.8.3
                   , GHC == 8.8.4
                   , GHC == 8.10.1
                   , GHC == 9.0.1

library
  hs-source-dirs:      src
  exposed-modules:
                     -- Primal.Ops
                     -- , Primal.Ops.Array
                     -- ,
                       Primal.Ops.ByteArray
                     -- , Primal.Ops.SmallArray
                     -- , Primal.Ops.Char
                     , Primal.Ops.Int
                     , Primal.Ops.Word
                     -- , Primal.Ops.Float
                     -- , Primal.Ops.Double

                       -- Primal.Foreign.C.Atomic
  build-depends:       base >= 4.8.1 && < 5
                     , ghc-prim
                     , primal-ops-internal

  default-language:    Haskell2010
  ghc-options:         -Wall
  if !os(solaris)
    cc-options: -ftree-vectorize
  if arch(i386) || arch(x86_64)
    cc-options: -msse2
  -- c-sources: cbits/primal.c
  --          , cbits/primal_atomic.c
  --          , cbits/primal_stg.cmm
  cc-options: -Wno-sync-nand
  -- if impl(ghc < 8.6)
  --   c-sources: cbits/primal_compat.c
  --   if impl(ghc < 8.4)
  --     build-depends: ghc-prim
  --     if impl(ghc < 8.2)
  --       include-dirs: cbits
  --       install-includes: primal_compat.h

library primal-ops-internal
  visibility:        public
  hs-source-dirs:    internal
  exposed-modules:   Primal.Ops.Int.Internal
                   , Primal.Ops.Word.Internal
  build-depends:     base
                   , ghc-prim
  ghc-options:       -Wall
  if impl(ghc < 9.4)
     c-sources: cbits/primal_longlong.c


test-suite tests
  type:               exitcode-stdio-1.0
  hs-source-dirs:     tests
  main-is:            Main.hs
  other-modules:      Spec
                    , Test.Primal.Ops.IntSpec
  build-tool-depends: hspec-discover:hspec-discover
  build-depends:      QuickCheck
                    , base
                    , hspec
                    , primal-ops:{primal-ops, primal-ops-internal}

  default-language:   Haskell2010
  ghc-options:        -Wall
                      -threaded
                      -with-rtsopts=-N2
  if !impl(ghc < 8.0)
    ghc-options:      -fno-warn-redundant-constraints

test-suite doctests
  type:             exitcode-stdio-1.0
  hs-source-dirs:   tests
  main-is:          doctests.hs
  build-depends: base
               , doctest >=0.15
               , primal-ops
  default-language:    Haskell2010
  ghc-options:        -Wall
                      -threaded

source-repository head
  type:     git
  location: https://github.com/lehins/primal
  subdir:   primal-ops
