cabal-version: 1.12

name:           primal-pvar
version:        0.1.0.0
synopsis:       Mutable variable with primitive values
description:    Mutable variable `PVar` that is backed by a single value `MutableByteArray`
homepage:       https://github.com/lehins/pvar#readme
bug-reports:    https://github.com/lehins/pvar/issues
author:         Alexey Kuleshevich
maintainer:     alexey@kuleshevi.ch
copyright:      2020 Alexey Kuleshevich
category:       Data
license:        BSD3
license-file:   LICENSE
build-type:     Simple
tested-with:    GHC == 7.10.2
              , GHC == 7.10.3
              , GHC == 8.0.1
              , GHC == 8.0.2
              , GHC == 8.2.2
              , GHC == 8.4.3
              , GHC == 8.4.4
              , GHC == 8.6.3
              , GHC == 8.6.4
              , GHC == 8.6.5
              , GHC == 8.8.2
              , GHC == 8.8.3
extra-source-files: README.md
                  , CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/lehins/primal

library
  exposed-modules: Data.Prim.PVar
                 , Data.Prim.PVar.Unsafe
  other-modules:   Data.Prim.PVar.Internal
  hs-source-dirs:  src
  build-depends:   base >=4.8 && <6
                 , deepseq
                 , primal
  default-language: Haskell2010
  ghc-options: -Wall

test-suite tests
  type: exitcode-stdio-1.0
  main-is: Main.hs
  other-modules: Spec
               , Test.Prim.PVarSpec
  hs-source-dirs: tests
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends: QuickCheck
               , async
               , base >=4.7 && <5
               , deepseq
               , genvalidity
               , hspec
               , primal
               , primal-pvar
  default-language: Haskell2010
