name:                primal-test
version:             0.1.0.0
synopsis:            Short description
description:         Please see the README on GitHub at <https://github.com/lehins/primal-test#readme>
homepage:            https://github.com/lehins/primal-test
license:             BSD3
license-file:        LICENSE
author:              Alexey Kuleshevich
maintainer:          alexey@kuleshevi.ch
copyright:           2020 Alexey Kuleshevich
category:            Algorithms
build-type:          Custom
extra-source-files:  README.md
                   , CHANGELOG.md
cabal-version:       1.18
tested-with:         GHC == 7.10.3
                   , GHC == 8.0.2
                   , GHC == 8.2.2
                   , GHC == 8.4.3
                   , GHC == 8.4.4
                   , GHC == 8.6.3
                   , GHC == 8.6.4
                   , GHC == 8.6.5
                   , GHC == 8.8.1
                   , GHC == 8.8.2
                   , GHC == 8.10.1
custom-setup
  setup-depends:
      base
    , Cabal
    , cabal-doctest >=1.0.6

library
  hs-source-dirs:      src
  exposed-modules:     Test.Prim
                     , Test.Prim.Atomic
                     --, Test.Prim.Array
                     , Test.Prim.Memory
                     --, Test.Prim.Memory.Bytes

  other-modules:       Test.Prim.Common
  build-depends:       base >= 4.8 && < 5
                     , deepseq
                     , primal
                     --, primal-array
                     , primal-memory
                     , hspec
                     , QuickCheck
                     , genvalidity

  default-language:    Haskell2010
  ghc-options:         -Wall -fno-warn-orphans



test-suite tests-O1
  type:               exitcode-stdio-1.0
  hs-source-dirs:     tests
  main-is:            Main.hs
  other-modules:      Spec
                    , Test.Prim.Memory.BytesSpec
                    , Test.Prim.Memory.BytesExtraSpec
                    , Test.Prim.Memory.PtrSpec
  build-depends:      base
                    , bytestring
                    , deepseq
                    , primal
                    , primal-memory
                    , primal-test
                    , hspec
                    , QuickCheck

  default-language:   Haskell2010
  ghc-options:        -Wall
                      -fno-warn-orphans
                      -threaded
                      -with-rtsopts=-N2

test-suite tests-O0
  type:               exitcode-stdio-1.0
  hs-source-dirs:     tests
  main-is:            Main.hs
  other-modules:      Spec
                    , Test.Prim.Memory.BytesSpec
                    , Test.Prim.Memory.BytesExtraSpec
                    , Test.Prim.Memory.PtrSpec
  build-depends:      base
                    , bytestring
                    , deepseq
                    , primal
                    , primal-memory
                    , primal-test
                    , hspec
                    , QuickCheck

  default-language:   Haskell2010
  ghc-options:        -Wall
                      -fno-warn-orphans
                      -threaded
                      -with-rtsopts=-N2
                      -O0

source-repository head
  type:     git
  location: https://github.com/lehins/primal-test
