name:                primal-test
version:             0.1.0.0
synopsis:            Test suite and tools useful for testing primal packages
description:         Collection of instances and properties that are useful for testing other packages that rely on <https://hackage.haskell.org/package/primal primal>, <https://hackage.haskell.org/package/primal-memory primal-memory> and primal-mutable packages
homepage:            https://github.com/lehins/primal
license:             BSD3
license-file:        LICENSE
author:              Alexey Kuleshevich
maintainer:          alexey@kuleshevi.ch
copyright:           2020 Alexey Kuleshevich
category:            Algorithms
build-type:          Simple
extra-source-files:  README.md
                   , CHANGELOG.md
cabal-version:       1.18
tested-with:         GHC == 8.0.2
                   , GHC == 8.2.2
                   , GHC == 8.4.3
                   , GHC == 8.4.4
                   , GHC == 8.6.3
                   , GHC == 8.6.4
                   , GHC == 8.6.5
                   , GHC == 8.8.1
                   , GHC == 8.8.2
                   , GHC == 8.10.1

library
  hs-source-dirs:      src
  exposed-modules:     Test.Primal
                     , Test.Primal.MutArray
                     , Test.Primal.MutRef
                     , Test.Primal.Memory
                     --, Test.Primal.Memory.Bytes

  other-modules:       Test.Primal.Common
  build-depends:       base >= 4.9 && < 5
                     , async
                     , deepseq
                     , primal
                     , primal-memory
                     , primal-container
                     , hspec
                     , QuickCheck
                     , genvalidity

  default-language:    Haskell2010
  ghc-options:         -Wall -fno-warn-orphans



test-suite memory-tests-O1
  type:               exitcode-stdio-1.0
  hs-source-dirs:     memory-tests
  main-is:            Main.hs
  other-modules:      Spec
                    , Test.Primal.Memory.BytesSpec
                    , Test.Primal.Memory.BytesExtraSpec
                    , Test.Primal.Memory.PtrSpec
  build-tool-depends: hspec-discover:hspec-discover
  build-depends:      base
                    , bytestring
                    , deepseq
                    , primal
                    , primal-memory
                    , primal-test
                    , hspec
                    , QuickCheck

  default-language:   Haskell2010
  ghc-options:        -Wall
                      -fno-warn-orphans
                      -threaded
                      -with-rtsopts=-N2

test-suite memory-tests-O0
  type:               exitcode-stdio-1.0
  hs-source-dirs:     memory-tests
  main-is:            Main.hs
  other-modules:      Spec
                    , Test.Primal.Memory.BytesSpec
                    , Test.Primal.Memory.BytesExtraSpec
                    , Test.Primal.Memory.PtrSpec
  build-tool-depends: hspec-discover:hspec-discover
  build-depends:      base
                    , bytestring
                    , deepseq
                    , primal
                    , primal-memory
                    , primal-test
                    , hspec
                    , QuickCheck

  default-language:   Haskell2010
  ghc-options:        -Wall
                      -fno-warn-orphans
                      -threaded
                      -with-rtsopts=-N2
                      -O0

test-suite mutable-tests-O1
  type:               exitcode-stdio-1.0
  hs-source-dirs:     mutable-tests
  main-is:            Main.hs
  other-modules:      Spec
                    , Test.Primal.MutArraySpec
  build-tool-depends: hspec-discover:hspec-discover
  build-depends:      base
                    , bytestring
                    , deepseq
                    , primal
                    , primal-memory
                    , primal-container
                    , primal-test
                    , hspec
                    , QuickCheck

  default-language:   Haskell2010
  ghc-options:        -Wall
                      -fno-warn-orphans
                      -threaded
                      -with-rtsopts=-N2

test-suite mutable-tests-O0
  type:               exitcode-stdio-1.0
  hs-source-dirs:     mutable-tests
  main-is:            Main.hs
  other-modules:      Spec
                    , Test.Primal.MutArraySpec
  build-tool-depends: hspec-discover:hspec-discover
  build-depends:      base
                    , bytestring
                    , deepseq
                    , primal
                    , primal-memory
                    , primal-container
                    , primal-test
                    , hspec
                    , QuickCheck

  default-language:   Haskell2010
  ghc-options:        -Wall
                      -fno-warn-orphans
                      -threaded
                      -with-rtsopts=-N2
                      -O0

source-repository head
  type:     git
  location: https://github.com/lehins/primal
  subdir:   primal-test
